# keystone

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  justfile  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  task.yml
.github/scripts/: post-coverage-comment.py
.github/workflows/: ci.yml  dependabot-auto-merge.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/tests/: test_main.py
docs/: CONTRIBUTING.md  OVERVIEW.md
e2e/: .gitignore  generate_pdf_report.py  pyproject.toml
e2e/features/: environment.py  greeting.feature
e2e/features/steps/: greeting_steps.py
frontend/: .dockerignore  Dockerfile  README.md  angular.json  eslint.config.mjs  package-lock.json  package.json  proxy.conf.docker.json
frontend/src/: index.html
frontend/src/app/: app.config.ts  app.html  app.scss  app.spec.ts  app.ts
tests/: test_main.py
