[project]
name = "keystone"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "httpx>=0.28.1",
    "pytest-asyncio>=0.25.2",
    "behave>=1.2.6",
    "ruff>=0.9.0",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "C4",        # flake8-comprehensions
    "DTZ",       # flake8-datetimez
    "T10",       # flake8-debugger
    "PT",        # flake8-pytest-style
    "SIM",       # flake8-simplify
    "ARG",       # flake8-unused-arguments
    "PTH",       # flake8-use-pathlib
    "PL",        # pylint
    "RUF",       # Ruff-specific
]
ignore = [
    "PLR0913",   # Too many arguments (common in FastAPI)
    "PLR2004",   # Magic values (acceptable for HTTP codes)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=json",
    "--cov-report=lcov",
    "--cov-branch",
]
