[project]
name = "keystone-e2e"
version = "0.1.0"
description = "E2E BDD tests for Keystone"
requires-python = ">=3.14"
dependencies = [
    "behave>=1.2.6",
    "playwright>=1.49.1",
    "reportlab>=4.0.0",
    "pillow>=11.1.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "C4",        # flake8-comprehensions
    "DTZ",       # flake8-datetimez
    "T10",       # flake8-debugger
    "PT",        # flake8-pytest-style
    "SIM",       # flake8-simplify
    "ARG",       # flake8-unused-arguments
    "PTH",       # flake8-use-pathlib
    "PL",        # pylint
    "RUF",       # Ruff-specific
]
ignore = [
    "PLR0913",   # Too many arguments (common in FastAPI)
    "PLR2004",   # Magic values (acceptable for HTTP codes)
]

[tool.ruff.lint.per-file-ignores]
"features/steps/**/*.py" = ["ARG001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
